match events distance calc

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -63,7 +63,7 @@
                     [tuiTextfieldCleaner]="true"
                     [min]="-49"
                     [max]="50"
-                    (tuiValueChanges)="onBallOnChange(events, eventsArray, $event, i, 50, -49)"
+                    (tuiValueChanges)="onBallOnChange(events, eventsArray, $event, i, 50)"
                   >
                     {{ 'Ball On' | uppercase }}
                     <input
