match events distance calc and score result ifs

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -545,6 +545,7 @@
               <div class="event-table-cell">
                 @if (getEventTeam(eventsArray, i); as selectedTeam) {
                   @if (!isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.Flag) &&
+                  !isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassIncomplete) &&
                   !isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassDeflected) &&
                   !isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassDropped) &&
                   !isScoreResult(eventFormGroup, i, eventScoreResultKey, IFootballScoreResult.Td) &&
@@ -571,6 +572,7 @@
               <div class="event-table-cell">
                 @if (getEventTeam(eventsArray, i); as selectedTeam) {
                   @if (!isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.Flag) &&
+                  !isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassIncomplete) &&
                   !isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassDeflected) &&
                   !isPlayResult(eventFormGroup, i, eventPlayResultKey, IFootballPlayResult.PassDropped) &&
                   !isScoreResult(eventFormGroup, i, eventScoreResultKey, IFootballScoreResult.Td) &&
